[package]
name = "antimony"
version = "0.0.0"
homepage = "https://antimony.rs"
authors = ["Mohammed Makhlouf <msmakhlouf@gmail.com>","Mohammad Samir <msamirdev92@gmail.com>"]
keywords = ["stream-processing","distributed", "real-time","drpc"]
repository = "https://github.com/antimonyproject/antimony"
documentation = "https://docs.rs/antimony"
readme = "README.md"
license = "MIT/Apache-2.0"
description = """
    A topology builder crate for Antimony. Version 0.0.0 is published as a placeholder.
"""
[dependencies]
