[package]
name = "antimony"
version = "0.0.0"
homepage = "https://antimony.rs"
authors = ["Mohammed Makhlouf <msmakhlouf@gmail.com>","Mohammad Samir <me@msamir.me>"]
keywords = ["stream-processing","distributed", "real-time","drpc"]
repository = "https://github.com/antimonyproject/antimony"
documentation = "https://docs.rs/antimony"
readme = "README.md"
license = "MIT/Apache-2.0"
description = """
    A topology builder crate for Antimony. Version 0.0.0 is published as a placeholder.
"""

[dependencies]
rustc-serialize = "0.3.24"
futures = "0.1.16"
tokio-core = "0.1.9"
tokio-io = "0.1.3"
tokio-uds = "0.1.5"
futures-cpupool = "0.1.6"
